--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 }
 
 img {
-	animation: fly 3s infinite;
+	animation: fly 1.5s;
 	top: 0;
 	left: 0;
 	position: absolute;
@@ -36,17 +36,18 @@ img {
 }
 
 @keyframes fly {
+
 	0%{
-		left: 150%;
-		opacity: 1;
+		left: -25%;
+		opacity: .25;
 	}
 	 50%{
-		left: 50%;
-		opacity: 1;
+		left: 0%;
+		opacity: .5;
 	}
 	 100%{
 		left: 0%;
-		opacity: .50;
+		opacity: 1;
 	}
 }
 
@@ -58,8 +59,8 @@ img {
 	<div style="flex: 1">
 		<img src="https://media-exp1.licdn.com/dms/image/C510BAQEv7iGRobRfBA/company-logo_200_200/0/1519929014889?e=2147483647&v=beta&t=WdhUn9Wj_einn2u2xHBC3pBRk5FoKpN5DcOz1lw8Y9A" width="100" height="100" alt="Magna Logo">
 	</div>
-	<div style="flex: 5">
-    	<h2 style="color:orange; font-size: 30px">Magna Scripts</h2>
+	<div style="flex: 5; margin-left: -250px;">
+    	<h2 style="color:orange; font-size: 30px; animation: fly 1.5s">Magna Scripts</h2>
 	</div>
 </div>
 <p>Select the script you would like to run:</p>
