--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ img {
 	<div style="flex: 1">
 		<img src="https://media-exp1.licdn.com/dms/image/C510BAQEv7iGRobRfBA/company-logo_200_200/0/1519929014889?e=2147483647&v=beta&t=WdhUn9Wj_einn2u2xHBC3pBRk5FoKpN5DcOz1lw8Y9A" width="100" height="100" alt="Magna Logo">
 	</div>
-	<div style="flex: 5; margin-left: -250px;">
+	<div style="flex: 5;">
     	<h2 style="color:orange; font-size: 30px; animation: fly 1.5s">Magna Scripts</h2>
 	</div>
 </div>
