--- a/is-scripts.html
+++ b/is-scripts.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>MagnaPortal</title>
 <style>
+
+:root {
+  --time: 4s;
+}
 .button {
   background-color: orange; /* Green */
   border: none;
@@ -35,6 +39,20 @@ img {
 	pointer-events: none;
 }
 
+.pey {
+	opacity: 0;
+	animation-name: peek;
+	animation-delay: var(--time);
+	animation-duration: 3s;
+	top: 0;
+	left: 0;
+	position: absolute;
+	z-index: 998;
+	pointer-events: none;
+	transform: rotate(90deg);
+}
+
+
 @keyframes fly {
 
 	0%{
@@ -51,38 +69,83 @@ img {
 	}
 }
 
+@keyframes peek {
+
+	0%{
+		left: 0%;
+		opacity: .25;
+	}
+	 50%{
+		left: 40px;
+		opacity: .5;
+	}
+	 65%{
+		left: 40px;
+		opacity: .5;
+	}
+	 100%{
+		left: -5%;
+		opacity: 1;
+	}
+}
+
 </style>
 </head>
 
 <body style="overflow:hidden">
 <div style="display: flex">
 	<div style="flex: 1">
-		<img src="https://media-exp1.licdn.com/dms/image/C510BAQEv7iGRobRfBA/company-logo_200_200/0/1519929014889?e=2147483647&v=beta&t=WdhUn9Wj_einn2u2xHBC3pBRk5FoKpN5DcOz1lw8Y9A" width="100" height="100" alt="Magna Logo">
+		<img src="magna.png" width="100" height="100" alt="Magna Logo">
+		<img class="pey" src="p.png" width="100" height="100" alt="Peyton">
 	</div>
 	<div style="flex: 5;">
     	<h2 style="color:orange; font-size: 30px; animation: fly 1.5s">Magna Scripts</h2>
 	</div>
 </div>
 <p>Select the script you would like to run:</p>
-<input type="radio" name="test" id="discovery"><label for="discovery"><b> Discovery Report</b></label>
-<input type="radio" style="" name="test" id="beacon"><label for="beacon"><b> IS Beacon Report</b></label>
+<input type="radio" name="option" id="discovery" onclick="setFields()"><label for="discovery"><b> IS Discovery Report</b></label>
+<input type="radio" name="option" id="beacon_accuracy" onclick="setFields()"><label for="beacon_accuracy"><b> IS Beacon Accuracy</b></label>
 <br><br>
-Website URL <input id="weburl" type="text" placeholder=" https://www.seabags.com" style="background-color: lightgrey;width: 300px;margin: 5px 10px;color: orange;height:20px"><br><br>
-<button  style="height:50px;width:100px" id="send" type="submit" class="button">Send</button>
+<div id="option1">Website URL &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="weburl" type="text" placeholder=" https://www.seabags.com" style="background-color: lightgrey;width: 300px;margin: 5px 10px;color: orange;height:20px"><br></div>
+<div id="option2" style="display:none">Number of Tests <input id="accuracy_times" type="text" placeholder=" 50" style="background-color: lightgrey; width: 300px; margin: 5px 10px; color: orange; height:20px"><br></div>
+<br><br>
+<button  style="height:50px;width:100px;" id="send" type="submit" class="button">Send</button>
 
 <script>
+
+	function setFields(){
+		//Defaults
+		document.getElementById('option2').style.display = "none";
+
+		//Checks
+		if (document.getElementById('beacon_accuracy').checked){
+			document.getElementById('option2').style.display = "block";
+		}
+
+
+
+	}
+
+	function getRandomInt(max) {
+	  return Math.floor(Math.random() * max);
+	}
+
+	var r = document.querySelector(':root');
+
+	r.style.setProperty('--time', (3 + getRandomInt(1000)).toString()+'s');
+
 	document.getElementById("send").addEventListener("click", () => createEmail());
 
 	function createEmail() {
 		if(document.getElementById('discovery').checked){
 			document.location.href='mailto:jarviscarrascosa@gmail.com?subject=Discovery&body=' + document.getElementById('weburl').value;
-		}else if(document.getElementById('beacon').checked){
-			document.location.href='mailto:jarviscarrascosa@gmail.com?subject=Beacon&body=' + document.getElementById('weburl').value;
+		}else if(document.getElementById('beacon_accuracy').checked){
+			var test_quantity = document.getElementById('accuracy_times').value;
+			document.location.href='mailto:jarviscarrascosa@gmail.com?subject=Beacon&body='.concat(document.getElementById('weburl').value,"$",test_quantity,'$$');
 		}
 	}
-	
-	
+
+
 </script>
 </body>
 </html>
-
